elastic/apm-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: apm
spec:
  rules:
    - host: apm.nuc
      http:
        paths:
          - path: /
            backend:
              serviceName: apm
              servicePort: 8200
